# Liptonizer

./: .cproject  .gitignore  .project  CMakeLists.txt  Lipton.cpp  configure  ic3-haskell  lib.c  lipton.sh  test1.c
Lipton/: CMakeLists.txt  Lipton.cpp
LiptonBin/: CMakeLists.txt  Lipton.cpp  compile.sh  lipton.sh
LiptonBin/llvm/: LiptonPass.cpp  LiptonPass.h  ReachPass.cpp  ReachPass.h  Util.h
LiptonBin/util/: BitMatrix.cpp  BitMatrix.h  SCCQuotientGraph.cpp  SCCQuotientGraph.h  Util.h
c_tests/: fig1_1.c  fig1_1.impara.c  fig1_10.c  fig1_10.impara.c  fig1_5.impara.c  fig2_10.impara.c  fig2_5.c  fig2_5.impara.c  mini-pbzip2-safe.c  mini-pbzip2-safe.h  mini-stack-safe.c  mini-stack-safe.impara.c  mini-stack-unsafe.c  mini-stack-unsafe.impara.c  stack_safe.c
example/: bug.c  diamond.c  dynlocks.c  ht.c  htb.c  lazy-init-new.c  lazy-init-old.c  m.c  makefile  ndfs.c  par-sort.c  pbzip2.cpp  pt.c  pthread.c  test.sh  test1.c  uf.c
example/llvm/: airlines.cpp
llvm/: LiptonPass.cpp  LiptonPass.h  ReachPass.cpp  ReachPass.h  Util.h
util/: BitMatrix.cpp  BitMatrix.h  SCCQuotientGraph.h  Util.h
